# flexBox

./: .dropbox  .gitignore  .gitmodules  0001-convert-matlab-to-octave.patch  0001-converted-to-octave.patch  ProjectOntoL1Ball.m  README.md  README.txt  copyFiles.m  desktop.ini  flexBox.m  flexbox.m  testfile.asv  testfile.m  testfileCPP.m
CPP/: flexboxCPP.exp  flexboxCPP.lib  flexboxCPP.mexw64  testfile.m
CPP/source/: DllMain.cpp  Makefile  cubicInterpolation.cpp  cubicInterpolation.h  flexBox.h  flexDualizedDataTerm.h  flexEmptyDataterm.h  flexL1DualizedDataTerm.h  flexL1DualizedOperator.h  flexL1dataTerm.h  flexL1dualizedOperatorAniso.h  flexL1dualizedOperatorIso.h  flexL2dataTerm.h  flexL2dualizedOperator.h  flexMatrix.h  flexTermDual.h  flexTermPrimal.h  flexTildeMultiOperatorMultiDual.h  flexVector.h  flexboxCPP.aps  flexboxCPP.rc  flexboxCPP.sln  flexboxCPP.vcxproj  flexboxCPP.vcxproj.filters  functionalPart.h  functions.cpp  helper.h  linearInterpolation.cpp  linearInterpolation.h  mex.def  project.def  resource.h  tools.h
CPP_module/: README.md  compileCudaModule.m  compileMexModule.m  flexBoxCPP.mexw64
CPP_module/source/: CMakeLists.txt  cudaCompileResult.txt  flexBasicDualizedOperator.h  flexBox.h  flexBoxData.h  flexBoxDataCPU.h  flexBoxDataGPU.h  flexDiagonalOperator.h  flexDualizedDataTerm.h  flexDualizedOperator.h  flexEmptyDataTerm.h  flexFrobeniusDualizedOperator.h  flexGradientOperator.h  flexIdentityOperator.h  flexKLdualizedDataTerm.h  flexL1DualizedDataTerm.h  flexL1dataTerm.h  flexL1dualizedOperatorAniso.h  flexL1dualizedOperatorIso.h  flexL2dataTerm.h  flexL2dualizedDataTerm.h  flexL2dualizedOperator.h  flexLinearOperator.h  flexMatrix.h  flexMatrixGPU.h  flexProx.h  flexProxDualBoxConstraint.h  flexProxDualDataKL.h  flexProxDualDataL1.h  flexProxDualDataL2.h  flexProxDualFrobenius.h  flexProxDualHuber.h  flexProxDualL1Aniso.h  flexProxDualL1Iso.h  flexProxDualL2.h  flexProxList.h  flexSolver.h  flexSolverPrimalDual.h  flexSolverPrimalDualCuda.h  flexSuperpixelOperator.h  (+12 more)
CPP_module/source/data/: CMakeLists.txt  flexBoxData.h  flexBoxDataCPU.h
CPP_module/source/examples/: CMakeLists.txt  exampleROF.cu  sampleFiles.h.in
CPP_module/source/operator/: CMakeLists.txt  flexDiagonalOperator.h  flexGradientOperator.h  flexIdentityOperator.h  flexLinearOperator.h  flexMatrix.h  flexMatrixGPU.h  flexSuperpixelOperator.h  flexZeroOperator.h
CPP_module/source/prox/: CMakeLists.txt  flexProx.h  flexProxDualBoxConstraint.h  flexProxDualDataKL.h  flexProxDualDataL1.h  flexProxDualDataL2.h  flexProxDualFrobenius.h  flexProxDualHuber.h  flexProxDualInnerProduct.h  flexProxDualL1Aniso.h  flexProxDualL1Iso.h  flexProxDualL2.h
CPP_module/source/solver/: CMakeLists.txt  flexSolverPrimalDual.h  flexSolverPrimalDualCuda.h
CPP_module/source/term/: CMakeLists.txt  flexTermDual.h  flexTermPrimal.h
CPP_module/source/wrappers/Matlab/: CMakeLists.txt
CPP_module/source/wrappers/matlab/: CMakeLists.txt  functions.cpp  functions.cu
UML/: dataTerms.txt  operators.txt  regularizerTemsCurlAnticurl.txt  regularizerTemsCurlMisc.txt  regularizerTemsHessian.txt  regularizerTemsIdentity.txt  regularizerTemsLaplace.txt  regularizerTemsShear.txt  regularizerTermsCurlAnticurl.txt  regularizerTermsDiv.txt  regularizerTermsGrad.txt  regularizerTermsHessian.txt  regularizerTermsIdentity.txt  regularizerTermsLaplace.txt  regularizerTermsMisc.txt  regularizerTermsShear.txt
UML/txt/: dataTerms.txt  operators.txt  parts.txt  regularizerTermsConstraint.txt  regularizerTermsGeneralOperator.txt  regularizerTermsGrad.txt  regularizerTermsHessLap.txt  regularizerTermsOperators.txt  regularizerTermsOther.txt  regularizerTermsVectorField.txt
basic/: dataTerm.m  dual.m  dualPart.m  functionalPart.m  primal.m  primalPart.m  primalVar.m
examples/: Thumbs.db  exampleConstraint.m  exampleCustomRegularizer.m  exampleFunctionHandleOperator.m  exampleInterpolationTV.m  exampleL2Inf.m  exampleLInf.m  exampleLInf2.m  exampleLInf3.m  exampleNuclearNorm.m  exampleOperatorConcatenation.m  exampleOpticalFlow.m  exampleROF.m  exampleROF_Deblurr.m  exampleRadon.m  exampleSegmentation.m  exampleSegmentationColor.m  exampleTGV.m
manual/: manual.aux  manual.tex
notes/: notes.aux  notes.tdo  notes.tex
operators/: basicOperator.m  blurOperator.m  concatOperator.m  convolutionOperator.m  diagonalOperator.m  downsamplingOperator.m  functionHandleOperator.m  generateBackwardGradientND.m  generateBlurrND.m  generateCentralGradientND.m  generateForwardGradientND.m  gradientOperator.m  identityOperator.m  permutationOperator.m  subsamplingOperator.m  superpixelOperator.m  warpingOperator.m  zeroOperator.m
operators/generateMatrix/: generateBackwardGradND.m  generateBackwardGradientND.m  generateCentralGradientND.m  generateDownsamplingMatrix.m  generateDownsamplingMatrixNew.m  generateDownsamplingNew.m  generateForwardGradND.m  generateForwardGradientND.m  generateRadonMatrix.m  warpingOperator.m  warpingOperatorOld.m
programs/: denoising.m  motionEstimation.m  segmentation.m
prox/: FrobeniusProxDual.m  HuberDataProxDual.m  HuberProxDual.m  IdentityProxPrimal.m  KLDataProxDual.m  L1AnisoProxDual.m  L1AnisoProxDualShift.m  L1DataProxDual.m  L1HuberDataProxDual.m  L1HuberProxDual.m  L1InfDataProxDual.m  L1InfProxDual.m  L1IsoProxDual.m  L1IsoProxDualShift.m  L2DataProxDual.m  L2InfProxDual.m  L2proxDual.m  LInfDataProxDual.m  LInfProxDual.m  MinMaxProxPrimal.m  basicProx.m  constraintBoxDualized.m  innerProductProxDual.m  labelingProxDual.m  nuclearProxDual.m
terms/: basicTerm.m
terms/constraint/: boxConstraint.m  nonNegativityConstraint.m  nonNegativityConstraintOperator.m  nonPositivityConstraint.m
terms/data/: KLDataTerm.m  KLdataTermOperator.m  L1InfdataTerm.m  L1InfdataTermOperator.m  L1dataTerm.m  L1dataTermOld.m  L1dataTermOperator.m  L1opticalFlowTerm (Hendrik Dirkss in Konflikt stehende Kopie 2016-02-03).m  L1opticalFlowTerm.m  (+14 more)
tilde/: tildeMultiOperatorMultiDual.m  tildeMultiOperatorSingleDual.m  tildeSingleOperator.m
tools/: flowToColorV2.m  initVar.m  printToCmd.m  vararginParser.m
(+117 files in other folders)
